ipc/ipdl/test/ipdl/error/shmem_access_union.ipdl
union Union {
    [-r-w|+r+w] Shmem;
};

protocol shmem_access_union {
child:
    async Msg(Union u);
};
